[gd_scene load_steps=3 format=3 uid="uid://dcu2mey0vv56k"]

[ext_resource type="Script" path="res://assets/scripts/towers/preview_tower.gd" id="1_6agia"]
[ext_resource type="Texture2D" uid="uid://b6jmbweyvlkxi" path="res://assets/sprites/towers/tree.png" id="2_f5fou"]

[node name="PreviewTower" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_6agia")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.588235)
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("2_f5fou")
offset = Vector2(-2, -7.5)
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
z_as_relative = false
position = Vector2(1, 7)
scale = Vector2(2.5, 2.667)
polygon = PackedVector2Array(-15, -15, 15, -15, 15, 15, -15, 15)
metadata/_edit_group_ = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
